# calc-VACF-from-lammps

./: CMakeLists.txt  README.txt  compile_clang  compile_gcc_macos  compile_icc  runValgrind.sh
cmake/: DefineCompilerFlags.cmake
source/: CMakeLists.txt  corrdata.c  corrdata.h  main.c  readinput.c  readinput.h  sample.c  utils.c  utils.h
test/: data.vacf  hand-calculated-vacf.ods  in.vacf  input.vacf
